--- a/mapchat/style.css
+++ b/mapchat/style.css
@@ -1,17 +1,17 @@
-/* Taken from example */
+/*Started from Ming's Template on geolocation*/
 html {
-    height: 100%;
-    font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+	height: 100%;
+	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
 }
 
 body {
-    height: 100%;
-    margin: 0px;
-    padding: 0px;
+	height: 100%;
+	margin: 0px;
+	padding: 0px;
 }
 
 #map_canvas {
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
 }
 
