--- a/security/style.css
+++ b/security/style.css
@@ -17,3 +17,31 @@ h1, h2 {
 .less-space {
     padding-top: 0px;
 }
+
+ul {
+    list-style-position: inside;
+}
+
+li {
+    padding-bottom: 10px;
+}
+
+.images {
+    width: 100%
+}
+
+.left-img, .right-img {
+    width: 50%;
+    float: left;
+}
+
+.full-img {
+    width: 100%;
+    float: left;
+}
+
+
+
+img {
+    max-width: 100%;
+}
